# Simple-TDC-GameProject

./: .cursorrules  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  DOCUMENTATION_REORGANIZATION_REPORT.md  ERROR_SUMMARY.md  PHASE5_PR_DESCRIPTION.md  PHASE6_DEVMODE_DESIGN_REPORT.md  PHASE6_PLAN.md  PHASE6_REPORT.md  PR_DESCRIPTION.md  README.md  README_NEW.md  REFACTORING_COMPLETION_REPORT.md  build-wasm.ps1  build.ninja  build_with_vs2022.bat  build_with_x64_tools.bat  cel_design_improved.md  export_aseprite.bat  imgui.ini  setup.ps1  setup.py  test_roguelike_crash.cpp
Simple-TDC-GameProject/: .cursorrules  .editorconfig  .gitattributes  .gitignore  ARCHITECTURE_SIMPLIFICATION.md  CMakeLists.txt  CMakePresets.json  LICENSE  MINIMAL_CONFIGURATION.md
Simple-TDC-GameProject/.cursor/plans/: save-load-ui_a40d729c.plan.md
editor/: CMakeLists.txt
editor/include/Editor/Application/: EditorApp.h
editor/include/Editor/Windows/: AssetBrowserWindow.h  DefinitionEditorWindow.h  IEditorWindow.h  PreviewWindow.h  PropertyPanel.h  SearchPaletteWindow.h  SpriteEditorWindow.h  UnitEditorWindow.h  ValidationPanel.h
editor/src/: main_editor.cpp
editor/src/Editor/Application/: EditorApp.cpp
editor/src/Editor/Windows/: AssetBrowserWindow.cpp  DefinitionEditorWindow.cpp  PreviewWindow.cpp  PropertyPanel.cpp  SearchPaletteWindow.cpp  SpriteEditorWindow.cpp  UnitEditorWindow.cpp  ValidationPanel.cpp
game/: CMakeLists.txt
game/core/api/: AudioControlAPI.cpp  AudioControlAPI.hpp  AudioSystemAPI.hpp  BaseSystemAPI.cpp  BaseSystemAPI.hpp  BaseSystemAPIInternal.hpp  BattleProgressAPI.hpp  BattleSetupAPI.hpp  CollisionSystemAPI.hpp  DebugUIAPI.cpp  DebugUIAPI.hpp  ECSystemAPI.hpp  GameModuleAPI.cpp  GameModuleAPI.hpp  GameplayDataAPI.hpp  InputSystemAPI.hpp  RenderSystemAPI.hpp  ResourceSystemAPI.hpp  SceneOverlayControlAPI.hpp  SetupAPI.hpp  TimingSystemAPI.hpp  UISystemAPI.hpp  WindowSystemAPI.hpp
game/core/api/BaseSystemAPI/: BaseSystemAPI.Audio.cpp  BaseSystemAPI.Collision.cpp  BaseSystemAPI.Core.cpp  BaseSystemAPI.Log.cpp  BaseSystemAPI.Render.cpp  BaseSystemAPI.RenderUi.cpp  BaseSystemAPI.Resource.cpp  BaseSystemAPI.Timing.cpp  BaseSystemAPI.Window.cpp
game/core/api/BattleProgressAPI/: BattleProgressAPI.Battle.cpp  BattleProgressAPI.Core.cpp
game/core/api/BattleSetupAPI/: BattleSetupAPI.Core.cpp
game/core/api/ECSystemAPI/: ECSystemAPI.Core.cpp  ECSystemAPI.Entity.cpp
game/core/api/GameplayDataAPI/: GameplayDataAPI.Character.cpp  GameplayDataAPI.Consistency.cpp  GameplayDataAPI.Core.cpp  GameplayDataAPI.ItemPassive.cpp  GameplayDataAPI.PlayerData.cpp  GameplayDataAPI.Stage.cpp  GameplayDataAPI.TowerAttachment.cpp
game/core/api/InputSystemAPI/: InputSystemAPI.Core.cpp
game/core/api/SceneOverlayControlAPI/: SceneOverlayControlAPI.Core.cpp  SceneOverlayControlAPI.OverlayStack.cpp  SceneOverlayControlAPI.Render.cpp  SceneOverlayControlAPI.StateLifecycle.cpp  SceneOverlayControlAPI.Update.cpp
game/core/api/SetupAPI/: SetupAPI.Core.cpp  SetupAPI.EcsSpawn.cpp  SetupAPI.Wave.cpp
game/core/api/UISystemAPI/: UISystemAPI.Core.cpp  UISystemAPI.Draw.cpp  UISystemAPI.Effects.cpp  UISystemAPI.Events.cpp  UISystemAPI.ThemeAssets.cpp
game/core/config/: BattleSetupData.hpp  GameConfig.hpp  GameState.hpp  RenderPrimitives.hpp  RenderTypes.hpp  SharedContext.hpp
game/core/ecs/: IModule.hpp  defineComponents.hpp  defineModules.hpp
game/core/ecs/Components/: Animation.hpp  CharacterId.hpp  Combat.hpp  Equipment.hpp  Health.hpp  Movement.hpp  PassiveSkills.hpp  Position.hpp  Sprite.hpp  Stats.hpp  Team.hpp
game/core/ecs/entities/: Character.cpp  Character.hpp  CharacterLoader.cpp  CharacterLoader.hpp  CharacterManager.cpp  CharacterManager.hpp  CharacterStatCalculator.hpp  EntityCreationData.hpp  ItemPassiveLoader.cpp  ItemPassiveLoader.hpp  ItemPassiveManager.cpp  ItemPassiveManager.hpp  StageLoader.cpp  StageLoader.hpp  StageManager.cpp  StageManager.hpp  TowerAttachment.hpp  TowerAttachmentLoader.cpp  TowerAttachmentLoader.hpp  TowerAttachmentManager.cpp  TowerAttachmentManager.hpp
game/core/entities/: Character.cpp  Character.hpp  CharacterManager.cpp  CharacterManager.hpp  CharacterStatCalculator.hpp  CharacterToECS.hpp  EntityCreationData.hpp  ItemPassiveManager.cpp  ItemPassiveManager.hpp  StageManager.cpp  StageManager.hpp
game/core/entities/animation/: AnimationData.hpp
game/core/game/: BattleRenderer.cpp  BattleRenderer.hpp  FieldManager.cpp  FieldManager.hpp  InputHandler.cpp  InputHandler.hpp  WaveLoader.cpp  WaveLoader.hpp
game/core/init/: ResourceInitializer.cpp  ResourceInitializer.hpp
game/core/states/: EditorScene.cpp  EditorScene.hpp  GameScene.cpp  GameScene.hpp  HomeScreen.cpp  HomeScreen.hpp  IScene.hpp  InitScene.cpp  InitScene.hpp  TitleScreen.cpp  TitleScreen.hpp
game/core/states/overlays/: BattleResultOverlay.cpp  BattleResultOverlay.hpp  CharacterEnhancementOverlay.cpp  CharacterEnhancementOverlay.hpp  CodexOverlay.cpp  CodexOverlay.hpp  CustomStageEnemyQueueOverlay.cpp  CustomStageEnemyQueueOverlay.hpp  FormationOverlay.cpp  (+26 more)
game/core/system/: GameSystem.cpp  GameSystem.hpp  ModuleSystem.cpp  ModuleSystem.hpp  OverlayManager.cpp  OverlayManager.hpp  PlayerDataManager.cpp  PlayerDataManager.hpp  TowerEnhancementEffects.hpp
game/core/ui/: BattleHUDRenderer.cpp  BattleHUDRenderer.hpp  HUDRenderer.cpp  HUDRenderer.hpp  IUIComponent.hpp  ImGuiSoundHelpers.hpp  OverlayColors.hpp  UIEffects.hpp  UIEvent.hpp  UiAssetKeys.hpp
game/main/: main.cpp
game/src/: main_game.cpp
game/utils/: Colors.hpp  Log.h
shared/: CMakeLists.txt
shared/include/Core/: EventSystem.h  FileWatcher.h  FontManager.h  GameContext.h  SettingsManager.h  Signal.h
shared/include/Data/: DefinitionRegistry.h  UserDataManager.h
shared/src/Core/: EventSystem.cpp  FileWatcher.cpp  FontManager.cpp  GameContext.cpp  SettingsManager.cpp
shared/src/Data/: DefinitionRegistry.cpp  UserDataManager.cpp
test/: CMakeLists.txt  TestAnimationSystem.cpp  TestGridSheetProvider.cpp  TestHatSlimeRendering.cpp
(+720 files in other folders)
